JWT-ize the task apis
